<resources>
    <string name="app_name">Academy City</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="selectM">Select Multiple</string>
    <string name="sharedPref" translatable="false">file1</string>
    <string name="removeAll">Remove All</string>
    <string name="insertTitulo">Insert Title</string>
    <string name="insertDescricao">Insert Description</string>
    <string name="empty_not_saved">Values not inserted</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="notes">Notes</string>
    <string name="title_activity_maps">Map</string>
    <string name="coordinates">"Coordinates: "</string>
    <string name="distance">"Distance: "</string>
    <string name="address">"Address: "</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="LoginError">Login failed</string>
    <string name="update" >Update</string>
    <string name="filters" >Filters</string>
    <string name="acidente" >Accident</string>
    <string name="obras" >Constructions</string>
    <string name="etc" translatable="false">Etc</string>
    <string name="center" >Center</string>
    <string name="all" >All</string>
    <string name="markerInserted">Marker inserted!</string>
    <string name="meters">meters</string>
    <string name="latitude" translatable="false">Lat</string>
    <string name="longitude" translatable="false">Long</string>
    <string name="erroObterPontos" >Error obtaining Markers</string>
</resources>