<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/optionLogout"
        android:title="@string/logout"
        app:showAsAction="always" />
    <item
        android:id="@+id/optionAdd"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/optionUpdate"
        android:title="@string/update"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/optionRemove"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/subMenuFilters"
        android:title="@string/filters"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/optionAcidente"
                android:title="@string/acidente"/>
            <item android:id="@+id/optionObras"
                android:title="@string/obras"/>
            <item android:id="@+id/optionEtc"
                android:title="@string/etc"/>
        </menu>
    </item>
    <item
        android:id="@+id/optionCenter"
        android:title="@string/center"
        app:showAsAction="ifRoom" />
</menu>